# rust-shell-runner

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  index.js  package-lock.json  package.json  server.js
.github/workflows/: dist.yml  release.yml
src/: main.rs  tempfile.rs
