[package]
name = "shell-runner"
version = "2.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
uuid = { version= "1.3.3", features = ["serde", "v4"] }
